--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Your favorite music player" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<title>Music Player</title>
+		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
+		<title>Music Player - Acelera ZG</title>
 	</head>
 	<body>
 		<div id="root"></div>
